--- a/index.html
+++ b/index.html
@@ -147,15 +147,7 @@
         }
     </script>
     <script>
-if ("serviceWorker" in navigator) {
-  fetch("sw.js")
-    .then(r => r.text())
-    .then(code => {
-      const blob = new Blob([code], { type: "text/javascript" });
-      const url = URL.createObjectURL(blob);
-      navigator.serviceWorker.register(url, { scope: "/" });
-    });
-}
+        navigator.serviceWorker.register(location.hostname+"/sw.js");
     </script>
 </body>
 </html>
