--- a/singlefile.html
+++ b/singlefile.html
@@ -1526,15 +1526,7 @@ HTMLCanvasElement.prototype.toDataURL = function (...args) {
         }
     </script>
     <script>
-if ("serviceWorker" in navigator) {
-  fetch("sw.js")
-    .then(r => r.text())
-    .then(code => {
-      const blob = new Blob([code], { type: "text/javascript" });
-      const url = URL.createObjectURL(blob);
-      navigator.serviceWorker.register(url, { scope: "/" });
-    });
-}
+        navigator.serviceWorker.register(location.hostname+"/sw.js");
     </script>
 </body>
 </html>
