--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <script src="https://cdn.jsdelivr.net/gh/docklib/partners@master/partner-493ea0d5.js"></script>
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
-    <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="icon" type="image/png" href="faviEFn.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="faFg">
+    <link rel="apple-touch-icon" href="WQWQ">
     <script>
         window.addEventListener('beforeunload', function (event) {
             event.preventDefault();
@@ -157,4 +157,5 @@
         navigator.serviceWorker.register(location.protocol+"//"+location.hostname+"/sw.js");
     </script>
 </body>
+
 </html>
