--- a/singlefile.html
+++ b/singlefile.html
@@ -450,9 +450,9 @@ let zoneFrame = document.getElementById('zoneFrame');
 const searchBar = document.getElementById('searchBar');
 const sortOptions = document.getElementById('sortOptions');
 // https://www.jsdelivr.com/tools/purge
-const zonesURL = "https://cdn.jsdelivr.net/gh/gn-math/assets@main/zones.json";
-const coverURL = "https://cdn.jsdelivr.net/gh/gn-math/covers@main";
-const htmlURL = "https://cdn.jsdelivr.net/gh/gn-math/html@main";
+const zonesURL = "https://cdn.jsdelivr.net/gh/Derpinator888/BobAssets@V8.3/zones.json";
+const coverURL = "https://cdn.jsdelivr.net/gh/Derpinator888/BobCovers@V8/";
+const htmlURL = "https://cdn.jsdelivr.net/gh/Derpinator888/BobHtml@V8.1/";
 let zones = [];
 let popularityData = {};
 async function listZones() {
