--- a/singlefile.html
+++ b/singlefile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<base href="https://cdn.jsdelivr.net/gh/Derpinator888/bobmathsetup@V9.1/singlefile.html">
+<base href="https://cdn.jsdelivr.net/gh/Derpinator888/bobmathsetup@V9.1">
 <link rel="icon" type="image/png" href="">
 <link rel="icon" type="image/png" sizes="32x32" href="https://codehs.com/uploads/dbe3f749aac55cb0bec23da437492cda">
 <link rel="apple-touch-icon" href="/">
