--- a/autoupdate.html
+++ b/autoupdate.html
@@ -1,9 +1,9 @@
-<script>
+<script
     launch();
 
     function launch() {
       try {
-        fetch("https://cdn.jsdelivr.net/gh/Derpinator888/bobmathsetup@V9.1/singlefile.html"+Date.now())
+        fetch("https://cdn.jsdelivr.net/gh/Derpinator888/bobmathsetup@V9.3/singlefile.html"+Date.now())
           .then(response => response.text())
           .then(html => {
                 document.documentElement.innerHTML = html;
@@ -26,6 +26,7 @@
   </script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5521219086088837"
      crossorigin="anonymous"></script>
+
 
 
 
